--- a/OnlineShop/OnlineShop/Areas/Admin/Views/Login/Index.cshtml
+++ b/OnlineShop/OnlineShop/Areas/Admin/Views/Login/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model OnlineShop.Areas.Admin.Models.LoginModel;
+﻿@model OnlineShop.Areas.Admin.Models.LoginModel
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -29,38 +29,37 @@
                                     @using (Html.BeginForm("Login", "Login", FormMethod.Post))
                                     {
                                         <div class="text-center">
-                                            <h1 class="h4 text-gray-900 mb-4">Welcome Back!</h1>
+                                            <h1 class="h4 text-gray-900 mb-4">Chào mừng bạn!</h1>
                                         </div>
                                         <form class="user">
                                             <div class="form-group">
-                                                @Html.TextBoxFor(model => model.UserName, new {@class = "form-control", @autofocus = "autofocus"});
+                                               @Html.TextBoxFor(model => model.UserName, new {@class = "form-control", @autofocus = "autofocus", @placeholder="Email"})
                                             </div>
                                             <div class="form-group">
-                                                @Html.TextBoxFor(model => model.Password, new {@class = "form-control"});
+                                                @Html.TextBoxFor(model => model.Password, new {@class = "form-control", @placeholder="Mật khẩu" })
                                             </div>
                                             <div class="form-group">
-                                                <div class="custom-control custom-checkbox small">
-                                                    @Html.CheckBoxFor(model => model.Remember);
-                                                    <label class="custom-control-label" for="customCheck">Remember Me</label>
-                                                </div>
+                                                <div>                                                    
+                                                    @Html.CheckBoxFor(model => model.Remember) Nhớ mật khẩu                                
+												</div>
                                             </div>
                                             <button type="submit" class="btn btn-primary btn-user btn-block">
-                                                Login
+                                               Đăng nhập
                                             </button>
                                             <hr>
                                             <a href="index.html" class="btn btn-google btn-user btn-block">
-                                                <i class="fab fa-google fa-fw"></i> Login with Google
+                                                <i class="fab fa-google fa-fw"></i> Đăng nhập với Google
                                             </a>
                                             <a href="index.html" class="btn btn-facebook btn-user btn-block">
-                                                <i class="fab fa-facebook-f fa-fw"></i> Login with Facebook
+                                                <i class="fab fa-facebook-f fa-fw"></i> Đăng nhập với Facebook
                                             </a>
                                         </form>
                                         <hr>
                                         <div class="text-center">
-                                            <a class="small" href="forgot-password.html">Forgot Password?</a>
+                                            <a class="small" href="forgot-password.html">Quên mật khẩu?</a>
                                         </div>
                                         <div class="text-center">
-                                            <a class="small" href="register.html">Create an Account!</a>
+                                            <a class="small" href="register.html">Tạo tài khoản mới!</a>
                                         </div>
                                     }                                    
                                 </div>
