--- a/OnlineShop/OnlineShop/Areas/Admin/Views/Home/Index.cshtml
+++ b/OnlineShop/OnlineShop/Areas/Admin/Views/Home/Index.cshtml
@@ -1,17 +1,7 @@
 ﻿@{
-    Layout = null;
+    ViewBag.Title = "Trang chủ";
+    Layout = "~/Areas/Admin/Views/Shared/_Layouts.cshtml";
 }
-
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Index</title>
-</head>
-<body>
-    <div>
-        
-    </div>
-</body>
-</html>
+@section header{
+    Trang chủ
+}
