--- a/OnlineShop/OnlineShop/Areas/Admin/Views/Login/Index.cshtml
+++ b/OnlineShop/OnlineShop/Areas/Admin/Views/Login/Index.cshtml
@@ -31,18 +31,20 @@
                                         <div class="text-center">
                                             <h1 class="h4 text-gray-900 mb-4">Chào mừng bạn!</h1>
                                         </div>
+                                        
                                         <form class="user">
                                             <div class="form-group">
                                                @Html.TextBoxFor(model => model.UserName, new {@class = "form-control", @autofocus = "autofocus", @placeholder="Email"})
                                             </div>
                                             <div class="form-group">
-                                                @Html.TextBoxFor(model => model.Password, new {@class = "form-control", @placeholder="Mật khẩu" })
+                                                @Html.TextBoxFor(model => model.Password, new {@class = "form-control", @placeholder="Mật khẩu", @type="password" })
                                             </div>
                                             <div class="form-group">
                                                 <div>                                                    
                                                     @Html.CheckBoxFor(model => model.Remember) Nhớ mật khẩu                                
 												</div>
                                             </div>
+                                            @Html.ValidationSummary(false, "", new {@class="text-danger" })                                         
                                             <button type="submit" class="btn btn-primary btn-user btn-block">
                                                Đăng nhập
                                             </button>
