--- a/OnlineShop/OnlineShop/Areas/Admin/Views/Shared/_Layouts.cshtml
+++ b/OnlineShop/OnlineShop/Areas/Admin/Views/Shared/_Layouts.cshtml
@@ -339,6 +339,7 @@
     </div>
     <!-- Bootstrap core JavaScript-->
     <script src="/assets/admin/vendor/jquery/jquery.min.js"></script>
+    <script src="~/assets/admin/js/jquery.unobtrusive-ajax.min.js"></script>
     <script src="/assets/admin/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <!-- Core plugin JavaScript-->
     <script src="/assets/admin/vendor/jquery-easing/jquery.easing.min.js"></script>
