--- a/OnlineShop/OnlineShop/Areas/Admin/Views/User/Create.cshtml
+++ b/OnlineShop/OnlineShop/Areas/Admin/Views/User/Create.cshtml
@@ -7,76 +7,6 @@
 @*@section header{
         Thêm mới người dùng
     }*@
-@*<h2>Index</h2>
-
-    @using (Html.BeginForm())
-    {
-        @Html.AntiForgeryToken()
-        @Html.ValidationSummary(true)
-
-        <fieldset>
-            <legend>User</legend>
-
-            <div class="editor-label">
-                @Html.LabelFor(model => model.UserName)
-            </div>
-            <div class="editor-field">
-                @Html.TextBoxFor(model => model.UserName)
-                @Html.ValidationMessageFor(model => model.UserName)
-            </div>
-
-            <div class="editor-label">
-                @Html.LabelFor(model => model.Password)
-            </div>
-            <div class="editor-field">
-                @Html.TextBoxFor(model => model.Password)
-                @Html.ValidationMessageFor(model => model.Password)
-            </div>
-
-            <div class="editor-label">
-                @Html.LabelFor(model => model.Name)
-            </div>
-            <div class="editor-field">
-                @Html.TextBoxFor(model => model.Name)
-                @Html.ValidationMessageFor(model => model.Name)
-            </div>
-
-            <div class="editor-label">
-                @Html.LabelFor(model => model.Address)
-            </div>
-            <div class="editor-field">
-                @Html.TextBoxFor(model => model.Address)
-                @Html.ValidationMessageFor(model => model.Address)
-            </div>
-
-            <div class="editor-label">
-                @Html.LabelFor(model => model.Email)
-            </div>
-            <div class="editor-field">
-                @Html.TextBoxFor(model => model.Email)
-                @Html.ValidationMessageFor(model => model.Email)
-            </div>
-
-            <div class="editor-label">
-                @Html.LabelFor(model => model.Phone)
-            </div>
-            <div class="editor-field">
-                @Html.TextBoxFor(model => model.Phone)
-                @Html.ValidationMessageFor(model => model.Phone)
-            </div>
-            <div class="editor-label">
-                @Html.LabelFor(model => model.Status)
-            </div>
-            <div class="editor-field">
-                @Html.TextBoxFor(model => model.Status)
-                @Html.ValidationMessageFor(model => model.Status)
-            </div>
-
-            <p>
-                <input type="submit" value="Create" />
-            </p>
-        </fieldset>
-    }*@
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -85,7 +15,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>SB Admin 2 - Register</title>
+    <title>Đăng ký tài khoản</title>
     <!-- Custom fonts for this template-->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
