--- a/OnlineShop/OnlineShop/Areas/Admin/Views/Content/Create.cshtml
+++ b/OnlineShop/OnlineShop/Areas/Admin/Views/Content/Create.cshtml
@@ -13,7 +13,7 @@
             $('#btnSelectImage').on('click', function (e) {
                 e.preventDefault();
                 var finder = new CKFinder();
-                finder.SelectActionFunction = function (url) {
+                finder.selectActionFunction = function (url) {
                     $('#txtImage').val(url);
                 };
                 finder.popup();
