--- a/OnlineShop/OnlineShop/Views/Shared/_Layout.cshtml
+++ b/OnlineShop/OnlineShop/Views/Shared/_Layout.cshtml
@@ -6,14 +6,19 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 -->
 <!DOCTYPE html>
 <html>
-<head>
+<head>   
     <title>Free Home Shoppe Website Template | Home :: w3layouts</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <!--CSS-->
     <link href="/assets/client/css/style.css" rel="stylesheet" type="text/css" media="all" />
     <link href="/assets/client/css/slider.css" rel="stylesheet" type="text/css" media="all" />
-    <script type="text/javascript" src="/assets/client/js/jquery-1.7.2.min.js"></script>
+    <link href=" /assets/client/css/bootstrap.css" rel="stylesheet" />
+    <!--JS & jQuery-->
+    <script src="~/assets/client/js/popper.min.js"></script>
+    <script src="/assets/client/js/jquery-3.4.1.min.js"></script>
+    <script src="/assets/client/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="/assets/client/js/move-top.js"></script>
     <script type="text/javascript" src="/assets/client/js/easing.js"></script>
     <script type="text/javascript" src="/assets/client/js/startstop-slider.js"></script>
