--- a/OnlineShop/OnlineShop/Views/Shared/_Layout.cshtml
+++ b/OnlineShop/OnlineShop/Views/Shared/_Layout.cshtml
@@ -16,9 +16,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <link href="/assets/client/css/slider.css" rel="stylesheet" type="text/css" media="all" />
     <link href=" /assets/client/css/bootstrap.css" rel="stylesheet" />
     <!--JS & jQuery-->
-    <script src="~/assets/client/js/popper.min.js"></script>
+    <script src="/assets/client/js/popper.min.js"></script>
     <script src="/assets/client/js/jquery-3.4.1.min.js"></script>
     <script src="/assets/client/js/bootstrap.min.js"></script>
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
     <script type="text/javascript" src="/assets/client/js/move-top.js"></script>
     <script type="text/javascript" src="/assets/client/js/easing.js"></script>
     <script type="text/javascript" src="/assets/client/js/startstop-slider.js"></script>
